--- a/styles/globalStyles.css
+++ b/styles/globalStyles.css
@@ -1,9 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap");
-@import url(/styles/buttons.css);
-@import url(/styles/header.css);
-@import url(/styles/titles.css);
-@import url(/styles/general.css);
-@import url(/styles/card.css);
+@import url(./buttons.css);
+@import url(./header.css);
+@import url(./titles.css);
+@import url(./general.css);
+@import url(./card.css);
 * {
   padding: 0;
   margin: 0;
